--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Build
+dist
 
 # Dependencies
 node_modules
-.pnp
-.pnp.js
+
+# Debug
+logs
+*.log
+pnpm-debug.log*
 
 # Local env files
 .env
@@ -12,27 +16,15 @@ node_modules
 .env.test.local
 .env.production.local
 
-# Testing
-coverage
-
 # Turbo
 .turbo
 
-# Vercel
-.vercel
+# IDEs and editors
+.idea
 
-# Build Outputs
-.next/
-out/
-build
-dist
-
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Misc
-.DS_Store
-*.pem
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
