--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "starsly",
+  "name": "app",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "build": "dotenv -- turbo run build",
+    "dev": "dotenv -- turbo run dev",
+    "predev": "pnpm --filter=database run migrate",
+    "postbuild": "dotenv -- turbo run postbuild",
+    "db:push": "dotenv -- turbo db:push"
   },
   "devDependencies": {
-    "prettier": "^3.7.4",
+    "@antfu/eslint-config": "6.7.3",
+    "@types/node": "25.0.3",
+    "eslint-plugin-format": "1.1.0",
     "turbo": "^2.7.2",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "dotenv-cli": "11.0.0",
+    "eslint": "9.39.2"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
